--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         style-src 'self' 'unsafe-inline';
       "
     >
-    <title>estate-agent-app</title>
+    <title>dream-homes-app</title>
   </head>
   <body>
     <div id="root"></div>
